# real-time-ai-using-socket

./: .env.example  README.md  pyproject.toml
client/: main.py
server/: main.py
